--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@alch/alchemy-web3": "^1.4.2",
     "@coinbase/wallet-sdk": "^3.1.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
